src/test/compile-fail/circular_modules_main.rs
// Copyright 2013 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.


mod circular_modules_hello; //~ERROR: circular modules

pub fn hi_str() -> ~str {
  ~"Hi!"
}

fn main() {
    circular_modules_hello::say_hello();
}
